--- a/src/app.css
+++ b/src/app.css
@@ -58,4 +58,16 @@
 	html {
 		@apply scroll-smooth;
 	}
+
+	/* Chrome, Safari, Edge, Opera */
+	input::-webkit-outer-spin-button,
+	input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
+
+	/* Firefox */
+	input[type='number'] {
+		-moz-appearance: textfield;
+	}
 }
